# LightDID-ZKP

./: CITATION.cff  LICENSE  README.md  demo_capszk.py  device_benchmark_summary_64attr.csv  device_environment.csv  device_slowdown_ratios_64attr.csv  pyproject.toml
benchmarks/: README.md
benchmarks/anoncreds_python/: bench_anoncreds_optional.py
benchmarks/bbs_mattr/: bench_bbs_mattr.js  package.json
configs/devices/: container_baseline.json  mobile_like.json  tight_memory_profile.json
configs/policies/: p1_simple_selective_disclosure.json  p2_unlinkable_selective_disclosure.json  p3_credential_backed_predicate.json  p4_predicate_hidden_attributes.json  p5_unsupported_or_resource_exceeding.json
docs/: experiment_protocol.md  github_upload_steps.md  paper_claim_alignment.md  reviewer_notes.md
experiments/: _paths.py  ablation_study.py  generate_synthetic_raw_runs.py  make_figures.py  reproduce_tables.py  resource_sensitivity.py  run_all.py  selector_demo.py
results/: README.md
results/ablation/: unsafe_fallback_guard.csv
results/resource_sensitivity/: resource_grid.csv
results/selector/: selector_decisions.csv
results/summary/: anoncreds_50run_summary.csv  bbs_50run_summary.csv  per_attribute_growth.csv  scaling_ratios.csv
results/synthetic_raw_runs/: synthetic_raw_runs_from_summary_seed20260622.csv
results/tables/: combined_backend_summary.csv
src/lightdid_zkp/: __init__.py  cost.py  policy_parser.py  registry.py  selector.py  synthetic_benchmarks.py  types.py  verifier.py
tests/: test_selector.py
